# agent-passport-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yaml  ci.yaml  static.yml  website.yml
crates/kitepass-api-client/: Cargo.toml
crates/kitepass-api-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/kitepass-cli/: Cargo.toml  build.rs
crates/kitepass-cli/src/: cli.rs  error.rs  main.rs  runtime.rs  version.rs
crates/kitepass-cli/src/auth/: mod.rs
crates/kitepass-cli/src/commands/: access_key.rs  agent_passport.rs  audit.rs  login.rs  logout.rs  mod.rs  operations.rs  passport.rs  passport_policy.rs  policy.rs  profile.rs  sign.rs  status.rs  wallet.rs  wallet_import.rs
crates/kitepass-cli/src/config/: mod.rs
crates/kitepass-cli/src/output/: mod.rs
crates/kitepass-cli/tests/: cli_behavior_tests.rs  integration_tests.rs
crates/kitepass-config/: Cargo.toml
crates/kitepass-config/src/: agents.rs  lib.rs  passports.rs
crates/kitepass-crypto/: Cargo.toml
crates/kitepass-crypto/src/: agent_key.rs  ecdh.rs  encryption.rs  envelope.rs  hpke.rs  lib.rs
crates/kitepass-output/: Cargo.toml
crates/kitepass-output/src/: lib.rs
docs/: agent-security-design.md  cli-manual.md  development.md  enhance-cli-login-uex.md  implementation_plan.md  owner-token-and-agent-access-key-flow.md  principal-auth-and-agent-passport-flow.md  security-wallet-import.md
scripts/: deploy_kitepass_cli_to_nova.sh  deploy_to_nova.sh  install.sh  run_coverage_gate.sh
webpages/: add-kite.html  index.html  install.sh  script.js  styles.css
