[package]
name = "kitepass-api-client"
description = "HTTP client for Kite Agent Passport Gateway API"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kitepass-api-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
