[package]
name = "kitepass-cli"
description = "Kitepass CLI — command-line interface for Kite Agent Passport"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kitepass"
path = "src/main.rs"

[dependencies]
kitepass-api-client.workspace = true
kitepass-crypto.workspace = true
kitepass-config.workspace = true
kitepass-output.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
dialoguer = "0.12.0"
hex = "0.4.3"
sha2 = "0.10"

[dev-dependencies]
tokio = "1"
wiremock = "0.6.5"
