[package]
name = "kitepass-cli"
description = "Kitepass CLI — command-line interface for Kite Agent Passport"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kitepass"
path = "src/main.rs"

[dependencies]
kitepass-api-client.workspace = true
kitepass-crypto.workspace = true
kitepass-config.workspace = true
kitepass-output.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand_core.workspace = true
serde_json_canonicalizer = "0.3"
secrecy = "0.10"
dialoguer = "0.12.0"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.10"
webbrowser = "1.0.6"

[dev-dependencies]
tokio = "1"
wiremock = "0.6.5"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
