[package]
name = "kitepass-config"
description = "Local configuration management for Kitepass CLI"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kitepass-crypto.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
