[package]
name = "kitepass-crypto"
description = "Client-side cryptography for Kitepass CLI — ECDH, envelope encryption, Ed25519 key generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true
thiserror.workspace = true
rand_core = "0.6"
hkdf = "0.12.4"
sha2 = "0.10"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.8"
getrandom = "0.2"
