[package]
name = "kitepass-crypto"
description = "Client-side cryptography for Kitepass CLI — HPKE import, envelope encryption, Ed25519 key generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
aes-gcm.workspace = true
hpke.workspace = true
zeroize.workspace = true
thiserror.workspace = true
serde.workspace = true
hkdf = "0.12.4"
sha2 = "0.10"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.8"
rand09 = { package = "rand", version = "0.9", features = ["os_rng", "std_rng"] }
getrandom = "0.2"

[dev-dependencies]
toml.workspace = true
